# ao2-control-plane

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml  public-export-manifest.json
crates/ao2-cp-schema/: Cargo.toml
crates/ao2-cp-schema/src/: acceptance.rs  canonical.rs  control_plane.rs  error.rs  lib.rs  memory.rs  responses.rs
crates/ao2-cp-schema/tests/: acceptance.rs  canonical.rs  canonical_properties.rs  control_plane.rs  error.rs  memory.rs  responses.rs
crates/ao2-cp-server/: Cargo.toml  build.rs
crates/ao2-cp-server/src/: audit_log.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  route_catalog.rs  server.rs  signing.rs
crates/ao2-cp-server/src/handlers/: acceptance.rs  ai_task_board.rs  audit_log.rs  caching.rs  ci_evidence.rs  control_plane.rs  evidence_pack.rs  health.rs  hermes_watchdog.rs  landing.rs  memory.rs  mod.rs  operator_packet.rs  operator_release_evidence.rs  phase1_promotion.rs  provider_readiness.rs  provider_registry.rs  release_publication.rs  release_train.rs  risky_pr_golden.rs  stable_promotion_evidence.rs  storage.rs  windows_qualification_progress.rs
crates/ao2-cp-server/src/handlers/release_publication/: evaluator_decision.rs  release_surfaces.rs  support_bundle.rs  view.rs
crates/ao2-cp-server/tests/: acceptance.rs  acceptance_rubric_readback.rs  access_log.rs  ai_task_board_readback.rs  audit_log_endpoint.rs  audit_log_shipper.rs  audit_log_stream.rs  auth_header_parsing.rs  caching_responses.rs  ci_evidence_index.rs  compatibility_vectors.rs  config.rs  control_plane.rs  control_plane_e2e.rs  cross_os_queue_status_readback.rs  detached_project_start_bundle_verification_readback.rs  direct_dispatch_project_run_readback.rs  error_contract.rs  error_mapping.rs  evidence_pack.rs  factory_app_run_bundle_readback.rs  factory_app_run_readback.rs  factory_replacement_packet_readback.rs  gc_smoke.rs  generated_project_plan_readback.rs  health.rs  hermes_project_start_handoff_readback.rs  hermes_watchdog.rs  k37_plugin_observer_bundle_readback.rs  memory.rs  metrics_endpoint.rs  missed_call_app_run_readback.rs  observer_caching.rs  operator_release_evidence_readback.rs  operator_summary_readback.rs  phase1_promotion.rs  project_acceptance_review_readback.rs  project_run_package_readback.rs  project_start_handoff_bundle_readback.rs  provider_registry.rs  (+19 more)
crates/ao2-cp-server/tests/common/: mod.rs
crates/ao2-cp-server/tests/fixtures/: operator-release-evidence-bundle-summary.json
crates/ao2-cp-server/tests/fixtures/acceptance-rubric/: acceptance-rubric-signed-payload.json  acceptance-rubric.json  factory-project-start.json  project-plan.json
crates/ao2-cp-server/tests/fixtures/compatibility/: ao2-execution-receipt-v0.5.1.json  control-plane-readback-v0.1.15.json  control-plane-readback-v0.1.16.json
crates/ao2-cp-server/tests/fixtures/cross-os-queue-status/: macos-factory-project-run-summary.json  ubuntu-factory-project-run-summary.json  windows-factory-project-run-summary.json
crates/ao2-cp-server/tests/fixtures/detached-bundle-verification/: factory-project-start-bundle-verification.json  factory-project-start-bundle.json  factory-project-start.json  factory-queue-project-start-run-next.json
crates/ao2-cp-server/tests/fixtures/direct-dispatch-project-run-package/: SHA256SUMS  manifest.json  project-run.json
crates/ao2-cp-server/tests/fixtures/factory-app-run/: factory-app-smoke-evidence-pack.json
crates/ao2-cp-server/tests/fixtures/factory-app-run-bundle/: SHA256SUMS  bundle-evidence-pack.json  manifest.json  release-review.json
crates/ao2-cp-server/tests/fixtures/factory-replacement-packet/: factory-replacement-packet-verification.json  factory-replacement-packet.json
crates/ao2-cp-server/tests/fixtures/generated-project-plan-package/: SHA256SUMS  factory-project-plan.json  (+1 more)
crates/ao2-cp-storage/: Cargo.toml
crates/ao2-cp-storage/src/: bundle.rs  index.rs  lib.rs
crates/ao2-cp-storage/tests/: bundle.rs  bundle_atomic_write.rs  index.rs  orphan_sweep.rs  retention.rs
(+214 files in other folders)
