[workspace]
resolver = "2"
members = [
    "crates/ao2-cp-schema",
    "crates/ao2-cp-storage",
    "crates/ao2-cp-server",
]

[workspace.package]
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/uesugitorachiyo/ao2-control-plane"
rust-version = "1.94"

# Workspace-wide lints, inherited by every crate via `[lints] workspace = true`.
# `unsafe_code = "forbid"` is a hard guarantee for a read-only observer that
# has zero `unsafe` today — it makes any future `unsafe` a compile error
# (on local `cargo build`, not just CI) rather than something a reviewer must
# catch. Clippy gating stays in CI (`clippy --all-targets -D warnings`).
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
signature = "2"
subtle = "2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "limit", "timeout"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
